cmake_minimum_required(VERSION 3.26)
project(skiena)

set(CMAKE_CXX_STANDARD 23)

set(SGB ../../sgb)
include_directories(${SGB})
link_directories(/usr/local/lib)

find_library(gb REQUIRED NAMES libgb.a)
find_package(fmt CONFIG REQUIRED)
find_package(scn CONFIG REQUIRED)

add_executable(ex03-01 ex03-01.cpp)
add_executable(ex03-03 ex03-03.cpp)
add_executable(ex03-07 ex03-07.cpp)
add_executable(ex03-14 ex03-14.cpp)
target_link_libraries(ex03-14 PRIVATE fmt::fmt)
add_executable(ex03-26 ex03-26.cpp)
add_executable(ex03-28-partial-sums ex03-28-partial-sums.cpp)
add_executable(ex03-29-partial-sums-ii ex03-29-partial-sums-ii.cpp)
add_executable(sgb-example0 sgb-example0.cpp)
target_link_libraries(sgb-example0 PRIVATE gb)
add_executable(ch07-bfs ch07-bfs.cpp)
target_link_libraries(ch07-bfs PRIVATE fmt::fmt scn::scn)
add_executable(ch07-dfs ch07-dfs.cpp)
target_link_libraries(ch07-dfs PRIVATE fmt::fmt scn::scn)
add_executable(ex04-07 ex04-07.cpp)
add_executable(ch04-heap ch04-heap.cpp)
add_executable(ex04-17 ex04-17.cpp)
add_executable(ch04-quicksort ch04-quicksort.cpp)
add_executable(ex07-26 ex07-26.cpp)
add_executable(ex07-25 ex07-25.cpp)
add_executable(ex07-24 ex07-24.cpp)
add_executable(ex07-21 ex07-21.cpp)
add_executable(ex07-28 ex07-28.cpp)
add_executable(ch07-30 ch07-30.cpp)
