cabal-version:      3.4
name:               skiena
version:            0.1.0.0
synopsis:
    Solutions to exercises from Skiena's book "The algorithm design manual"

-- description:
license:            MIT
license-file:       LICENSE
author:             Mariano Casco
maintainer:         mariano@mailbox.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common skiena
    import:           warnings
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable ex03_12
    import: skiena
    main-is: ex03_12.hs
