cabal-version:      3.4
name:               skiena
version:            0.1.0.0
synopsis:
    Solutions to exercises from Skiena's book "The algorithm design manual"

-- description:
license:            MIT
license-file:       LICENSE
author:             Mariano Casco
maintainer:         mariano@mailbox.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common skiena
    import:           warnings
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable ex03_12
    import: skiena
    main-is: ex03_12.hs

executable ex03_13
    import: skiena
    main-is: ex03_13.hs

executable ex03_17
    import: skiena
    main-is: ex03_17.hs

executable ex04_15
    import: skiena
    main-is: ex04_15.hs

executable ex04_16
    import: skiena
    main-is: ex04_16.hs

executable ex04_32
    import: skiena
    main-is: ex04_32.hs

executable ex07_23
    import: skiena
    main-is: ex07_23.hs
